osx: fix compiler warnings

Added void parameter to avoid old-style definition warning.
Added -Wno-aggregate-return flag to avoid erroneous aggregate return warning.

https://bugzilla.gnome.org/show_bug.cgi?id=613663